adding PHI data feature to about page
SVN-Revision: 21868

--- a/pages/content/home/AboutP11.html
+++ b/pages/content/home/AboutP11.html
@@ -213,6 +213,10 @@ color:#666666;
               <td align="left">Enhanced UI support for all screen resolutions.</td><td>&nbsp;</td>
               <td align="left" valign="top" nowrap="nowrap">Persistent </td>
             </tr>
+			 <tr class="tabletd1" >
+               <td align="left">Only autorized users allowed to view PHI data and edit it.<td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+            </tr>
 	 </table>
 	 </td>
       </tr>
