authorized word corrected
SVN-Revision: 21874

--- a/pages/content/home/AboutP11.html
+++ b/pages/content/home/AboutP11.html
@@ -214,7 +214,7 @@ color:#666666;
               <td align="left" valign="top" nowrap="nowrap">Persistent </td>
             </tr>
 			 <tr class="tabletd1" >
-               <td align="left">Only autorized users allowed to view PHI data and edit it.<td>
+               <td align="left">Only authorized users allowed to view PHI data and edit it.<td>
               <td align="left" valign="top" nowrap="nowrap">Persistent </td>
             </tr>
 	 </table>
