--- a/pages/content/home/AboutP11.html
+++ b/pages/content/home/AboutP11.html
@@ -155,6 +155,75 @@ color:#666666;
         <td>&nbsp;</td>
       </tr>
    
+<tr>
+        <td ><table width="100%" height="33" border="0" cellpadding="0" cellspacing="0">
+          <tr>
+            <td width="10"><img src="images/about/t1.gif" width="10" height="33" /></td>
+			<td background="images/about/t_bg.gif" width="*" class="mdmainhding">What is new in caTissue Suite v1.1.p4?</td>
+            <td width="10"><img src="images/about/t2.gif" width="10" height="33" /></td>
+          </tr>
+        </table></td>
+      </tr>
+	   <tr>
+        <td class="black_ar11" style="padding:10px;">
+          The following table outlines the features of caTissue Suite v1.1.p4 and the organizations that funded these features 
+		</td>
+      </tr>
+	  <tr align="center">
+        <td  style="padding:15px;">
+		<table width="100%" border="0" cellpadding="4" cellspacing="0" class="black_ar">
+            <tr class="tableheading">
+              <td align="left"><b>Features </b></td><td>&nbsp;</td>
+              <td align="left"><b>Funded by </b></td>
+            </tr>
+            <tr class="tabletd2" >
+              <td align="left">Ability to deploy application on application server clustering environment.</td><td>&nbsp;</td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+            </tr>
+            <tr class="tabletd1" >
+               <td align="left">Removal of in-memory caches for better memory utilization.</td><td>&nbsp;</td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+            </tr>
+			 <tr class="tabletd2" >
+              <td align="left">caTissue caGrid read time out issues.</td><td>&nbsp;</td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+            </tr>
+            <tr class="tabletd1" >
+               <td align="left">Issues with auto storage container assignments while collecting specimens.<td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+            </tr>
+			<tr class="tabletd2" >
+              <td align="left">Remove applets used for Tissue site selection.</td><td>&nbsp;</td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+            </tr>
+            <tr class="tabletd1" >
+               <td align="left">UI dashboard for My queries, Shared queries, All queries.<td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+            </tr>
+			<tr class="tabletd2" >
+              <td align="left">Exported Query result CSV file now has Query title, Export date and query limits.</td><td>&nbsp;</td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+            </tr>
+            <tr class="tabletd1" >
+               <td align="left">Query Sharing : Ability to share queries to users.<td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+            </tr>
+			<tr class="tabletd2" >
+              <td align="left">In tree view of query result, participant name should be displayed as Last Name, First Name.</td><td>&nbsp;</td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+            </tr>
+			 <tr class="tabletd1" >
+               <td align="left">Ability to add some additional information with version info on home page.<td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+            </tr>
+	 </table>
+	 </td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+      </tr>
+
+
 
 <tr>
         <td ><table width="100%" height="33" border="0" cellpadding="0" cellspacing="0">
