--- a/pages/content/home/AboutP11.html
+++ b/pages/content/home/AboutP11.html
@@ -185,7 +185,7 @@ color:#666666;
               <td align="left" valign="top" nowrap="nowrap">Persistent </td>
             </tr>
 			 <tr class="tabletd2" >
-              <td align="left">caTissue caGrid read time out issues.</td><td>&nbsp;</td>
+              <td align="left">caTissue caGrid service read time out issues.</td><td>&nbsp;</td>
               <td align="left" valign="top" nowrap="nowrap">Persistent </td>
             </tr>
             <tr class="tabletd1" >
@@ -193,15 +193,15 @@ color:#666666;
               <td align="left" valign="top" nowrap="nowrap">Persistent </td>
             </tr>
 			<tr class="tabletd2" >
-              <td align="left">Remove applets used for Tissue site selection.</td><td>&nbsp;</td>
+              <td align="left">Removal of applets used for Tissue site selection.</td><td>&nbsp;</td>
               <td align="left" valign="top" nowrap="nowrap">Persistent </td>
             </tr>
             <tr class="tabletd1" >
-               <td align="left">UI dashboard for My queries, Shared queries, All queries.<td>
-              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+               <td align="left">UI dashboard for My queries, Shared queries and All queries.<td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent</td>
             </tr>
 			<tr class="tabletd2" >
-              <td align="left">Exported Query result CSV file now has Query title, Export date and query limits.</td><td>&nbsp;</td>
+              <td align="left">Exported Query result CSV file now has Query title, Export date and query limits. </td><td>&nbsp;</td>
               <td align="left" valign="top" nowrap="nowrap">Persistent </td>
             </tr>
             <tr class="tabletd1" >
@@ -209,7 +209,7 @@ color:#666666;
               <td align="left" valign="top" nowrap="nowrap">Persistent </td>
             </tr>
 			<tr class="tabletd2" >
-              <td align="left">In tree view of query result, participant name should be displayed as Last Name, First Name.</td><td>&nbsp;</td>
+              <td align="left">In tree view of query result, participant displays as Last Name, First Name.</td><td>&nbsp;</td>
               <td align="left" valign="top" nowrap="nowrap">Persistent </td>
             </tr>
 			 <tr class="tabletd1" >
@@ -229,14 +229,14 @@ color:#666666;
         <td ><table width="100%" height="33" border="0" cellpadding="0" cellspacing="0">
           <tr>
             <td width="10"><img src="images/about/t1.gif" width="10" height="33" /></td>
-			<td background="images/about/t_bg.gif" width="*" class="mdmainhding">What is new in caTissue Suite v1.1.p3?</td>
+			<td background="images/about/t_bg.gif" width="*" class="mdmainhding">Features of caTissue Suite v1.1.p3</td>
             <td width="10"><img src="images/about/t2.gif" width="10" height="33" /></td>
           </tr>
         </table></td>
       </tr>
 	   <tr>
         <td class="black_ar11" style="padding:10px;">
-          The following table outlines the features of caTissue Suite v1.1.p3 and the organizations that funded these features 
+         The major features in the caTissue Suite v1.1.p3 release were: 
 		</td>
       </tr>
 	  <tr align="center">
@@ -260,11 +260,11 @@ color:#666666;
             </tr>
             <tr class="tabletd1" >
                <td align="left">Scientist should not able to view participant details on Participant matching UI.<td>
-              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent</td>
             </tr>
 			<tr class="tabletd2" >
               <td align="left">On Server exception the page is redirect to Report problem page.</td><td>&nbsp;</td>
-              <td align="left" valign="top" nowrap="nowrap">Persistent </td>
+              <td align="left" valign="top" nowrap="nowrap">Persistent</td>
             </tr>
             <tr class="tabletd1" >
                <td align="left">Browser timeout based on user activity and not server call.<td>
@@ -295,10 +295,10 @@ color:#666666;
   
 	 <tr>
         <td >
-		<table width="100%" height="33" border="0" cellpadding="0" cellspacing="0">
+		<table width="100%" height="100%" border="0" cellpadding="0" cellspacing="0">
           <tr>
             <td width="10"><img src="images/about/t1.gif" width="10" height="33" /></td>
-			<td background="images/about/t_bg.gif" width="*" class="mdmainhding">What is new in caTissue Suite v1.1.p2?</td>
+			<td background="images/about/t_bg.gif" width="*" class="mdmainhding">Features of caTissue Suite v1.1.p2</td>
             <td width="10"><img src="images/about/t2.gif" width="10" height="33" /></td>
           </tr>
         </table></td>
@@ -306,11 +306,11 @@ color:#666666;
 
       <tr>
         <td class="black_ar11" style="padding:10px;">
-          The following table outlines the features of caTissue Suite v1.1.p2 and the organizations that funded these features 
+		  The major features in the caTissue Suite v1.1.p2 release were:
 		</td>
       </tr>
       <tr align="center">
-        <td  style="padding:10px;">
+        <td  style="padding:15px;">
 		<table width="100%" border="0" cellpadding="4" cellspacing="0" class="black_ar">
             <tr class="tableheading">
               <td align="left"><b>Features </b></td>
@@ -403,7 +403,7 @@ color:#666666;
         <td ><table width="100%" height="33" border="0" cellpadding="0" cellspacing="0">
           <tr>
             <td width="10"><img src="images/about/t1.gif" width="10" height="33" /></td>
-			<td background="images/about/t_bg.gif" width="*" class="mdmainhding">Upcoming Release - caTissue Suite v1.1.p4 </td>
+			<td background="images/about/t_bg.gif" width="*" class="mdmainhding">Upcoming Release - caTissue Suite v1.1.p5 </td>
             <td width="10"><img src="images/about/t2.gif" width="10" height="33" /></td>
           </tr>
         </table></td>
