--- a/pages/content/home/AboutP11.html
+++ b/pages/content/home/AboutP11.html
@@ -22,7 +22,7 @@ body {
 	color: #171717;
 	vertical-align:middle;
 	margin:0px;
-	
+
 }
 .blue_ar_b {
 	font-family: verdana;
@@ -41,7 +41,7 @@ body {
 	background-color:#f6f6f6;
 	font-family:Verdana;
 	font-size:12px;
-}	
+}
 a:link {
 	color: #CC6600;
 	text-decoration: underline;
@@ -143,9 +143,9 @@ color:#666666;
 				    </table>
 				</td>
 			</tr>
-      
+
       <tr>
-        <td class="black_ar" style="padding:10px;">caTissue Suite v1.1.p is brought to you by Persistent Systems, a NCI certified caBIG Support Service provider. This version of caTissue is free to use and is an open source application. The new features in this release are either funded by Persistent or by our various customers. We thank all our customers for their generosity in allowing us to use their application extensions and making it freely available to the rest of the community. 
+        <td class="black_ar" style="padding:10px;">caTissue Suite v1.1.p is brought to you by Persistent Systems, a NCI certified caBIG Support Service provider. This version of caTissue is free to use and is an open source application. The new features in this release are either funded by Persistent or by our various customers. We thank all our customers for their generosity in allowing us to use their application extensions and making it freely available to the rest of the community.
  </td>
       </tr>
       <tr>
@@ -154,19 +154,67 @@ color:#666666;
       <tr>
         <td>&nbsp;</td>
       </tr>
-   
+
 <tr>
         <td ><table width="100%" height="33" border="0" cellpadding="0" cellspacing="0">
           <tr>
             <td width="10"><img src="images/about/t1.gif" width="10" height="33" /></td>
-			<td background="images/about/t_bg.gif" width="*" class="mdmainhding">What is new in caTissue Suite v1.1.p4?</td>
+			<td background="images/about/t_bg.gif" width="*" class="mdmainhding">What is new in caTissue Suite v1.1.p5?</td>
             <td width="10"><img src="images/about/t2.gif" width="10" height="33" /></td>
           </tr>
         </table></td>
       </tr>
 	   <tr>
         <td class="black_ar11" style="padding:10px;">
-          The following table outlines the features of caTissue Suite v1.1.p4 and the organizations that funded these features 
+          The following table outlines the features of caTissue Suite v1.1.p5 and the organizations that funded these features
+		</td>
+      </tr>
+	  <tr align="center">
+        <td  style="padding:15px;">
+		<table width="100%" border="0" cellpadding="4" cellspacing="0" class="black_ar">
+            <tr class="tableheading">
+              <td align="left"><b>Features </b></td><td>&nbsp;</td>
+              <td align="left"><b>Funded by </b></td>
+            </tr>
+            <tr class="tabletd2" >
+              <td align="left">Ability to print labels from Distribution page.</td><td>&nbsp;</td>
+              <td align="left" valign="top" nowrap="nowrap">Washington University </td>
+            </tr>
+            <tr class="tabletd1" >
+               <td align="left">Ability to print labels from from My List view.</td><td>&nbsp;</td>
+              <td align="left" valign="top" nowrap="nowrap">Washington University </td>
+            </tr>
+			 <tr class="tabletd2" >
+              <td align="left">Integration with Wustl Key.</td><td>&nbsp;</td>
+              <td align="left" valign="top" nowrap="nowrap">Washington University </td>
+            </tr>
+            <tr class="tabletd1" >
+               <td align="left">Ability to select subset of Clinical Diagnosis at CP definition level.<td>
+              <td align="left" valign="top" nowrap="nowrap">Washington University </td>
+            </tr>
+			<tr class="tabletd2" >
+              <td align="left">Support for Bulk data loading operations.</td><td>&nbsp;</td>
+              <td align="left" valign="top" nowrap="nowrap">Washington University </td>
+            </tr>
+	 </table>
+	 </td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+      </tr>
+
+<tr>
+        <td ><table width="100%" height="33" border="0" cellpadding="0" cellspacing="0">
+          <tr>
+            <td width="10"><img src="images/about/t1.gif" width="10" height="33" /></td>
+			<td background="images/about/t_bg.gif" width="*" class="mdmainhding">Features of caTissue Suite v1.1.p4?</td>
+            <td width="10"><img src="images/about/t2.gif" width="10" height="33" /></td>
+          </tr>
+        </table></td>
+      </tr>
+	   <tr>
+        <td class="black_ar11" style="padding:10px;">
+         The major features in the caTissue Suite v1.1.p4 release were:
 		</td>
       </tr>
 	  <tr align="center">
@@ -236,7 +284,7 @@ color:#666666;
       </tr>
 	   <tr>
         <td class="black_ar11" style="padding:10px;">
-         The major features in the caTissue Suite v1.1.p3 release were: 
+         The major features in the caTissue Suite v1.1.p3 release were:
 		</td>
       </tr>
 	  <tr align="center">
@@ -292,7 +340,7 @@ color:#666666;
       <tr>
         <td>&nbsp;</td>
       </tr>
-  
+
 	 <tr>
         <td >
 		<table width="100%" height="100%" border="0" cellpadding="0" cellspacing="0">
@@ -373,60 +421,33 @@ color:#666666;
       </tr>
 	  <tr>
         <td class="black_ar11" style="padding:10px;">
-		The major features in the caTissue Suite v1.1.p1 release were: 
+		The major features in the caTissue Suite v1.1.p1 release were:
 		<table class="td_md8"><tr><td class="black_ar">
             <ul>
               <li> Search functionality like Google </li>
               <li> Support for UK locale </li>
               <li> Auto generation capability for PPI field </li>
               <li> Ability to create Collection protocol with no specimen requirements</li>
-              <li> Auto complete dropdowns for protocols and participants in Collection Protocol based view</li>          
+              <li> Auto complete dropdowns for protocols and participants in Collection Protocol based view</li>
               <li> Improved Collection Protocol based view for specimen data entry</li>
               <li> Possible to Show/hide Dynamic Extensions forms and entities on specific Collection Protocols</li>
               <li> Advance query interface support outer join</li>
               <li> Fluid UI support for all screen resolutions</li>
               <li> Ability to a select printer location and printer type while label printing</li>
-              <li> Print functionality for Storage container labels</li>                 
-              <li> Performance enhancements </li>              
+              <li> Print functionality for Storage container labels</li>
+              <li> Performance enhancements </li>
               <li> Provision for #54 bug fixes</li>
              </ul>
 			</td></tr></table>
 		</td>
       </tr>
 	  <!-- Mandar 18Feb09 end -->
-   
-     	
-	<tr>
-        <td>&nbsp;</td>
-      </tr>
-	<tr>
-        <td ><table width="100%" height="33" border="0" cellpadding="0" cellspacing="0">
-          <tr>
-            <td width="10"><img src="images/about/t1.gif" width="10" height="33" /></td>
-			<td background="images/about/t_bg.gif" width="*" class="mdmainhding">Upcoming Release - caTissue Suite v1.1.p5 </td>
-            <td width="10"><img src="images/about/t2.gif" width="10" height="33" /></td>
-          </tr>
-        </table></td>
-      </tr> 
-	  <tr>
-        <td class="black_ar" style="padding:10px;"><p>To be updated</p>
-		<!--p>
-            <ul>
-              <li> Support for Microsoft IIS web server </li>
-              <li> Support for Microsoft SQL Server database </li>
-              <li> Support for another open source de-id tool </li>
-              <li> Continued improvement for better UI resolution support </li>
-              <li> Profiling for memory and performance enhancements </li>
-              <li> Other critical bug fixes and enhancements identified by our customers </li>
-            </ul>
-			</p-->
-		</td>
-    </tr>
+
     </table></td>
     <td width="65" valign="top" background="images/about/rightbg.jpg"><img src="images/about/right01.jpg" alt="About caTissue Suite v1.1.p2 " width="65" height="766" /></td>
-	
-	
-	
+
+
+
   </tr>
 </table>
 </body>
